infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mypost.com
      http:
          paths:
            - path: /query
              pathType: Prefix
              backend:
                service:
                  name: post-query-clusterip-srv
                  port: 
                    number: 3003
            - path: /post
              pathType: Prefix
              backend:
                service:
                  name: post-post-clusterip-srv
                  port:
                    number: 3001
            - path: /comments
              pathType: Prefix
              backend:
                service:
                  name: post-comment-clusterip-srv
                  port:
                    number: 3002
            - path: /?(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: post-client-clusterip-srv
                  port:
                    number: 3000
